--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,4 +1,9 @@
 {
-    "presets":["env","stage-0"],
-    "plugins":["transform-runtime"]
-  }
+  "presets": ["env", "stage-0"],
+  "plugins": ["transform-runtime", ["component", [
+    {
+      "libraryName": "mint-ui",
+      "style": true
+    }
+  ]]]
+}
